2009-11-17  Sanel <karijes@users.sourceforge.net>

	* edelib/Missing.h:
	* src/Missing.cpp: edelib_daemon() added since Solaris family does not
	provides it at all
	* edelib/Missing.h: separate these functions to different documentation
	module

2009-11-16  Sanel <karijes@users.sourceforge.net>

	* test/file.cpp:
	* test/run.cpp:
	* test/desktopfile.cpp: some #ifdef code to run pass tests on OpenSolaris
	* test/file.cpp: removed commented code

2009-11-13  Sanel <karijes@users.sourceforge.net>

	* edelib/ForeignCallback.h:
	* src/ForeignCallback.cpp: additional data parameter for
	foreign_callback_add(); also the order of parameters was changed
	* edelib/Nls.h: some macro code formatting

2009-11-12  Sanel <karijes@users.sourceforge.net>

	* edelib/IconLoader.h:
	* src/IconLoader.cpp:
	* src/xdgmime/xdgmimemagic.c:
	* src/icons/unknown-*.xpm
	* src/Run.cpp:
	* src/MenuItem.cpp: fixed warnings found on gcc 4.3.2 and error with
	PATH_MAX and signal() on OpenSolaris
	* src/MenuButton.cpp: make it compiles on FLTK 1.1.7

2009-11-10  Sanel <karijes@users.sourceforge.net>

	* edelib/Window.h:
	* src/Window.cpp: dump foreign callback code since separate implementation
	was added

2009-11-09  Sanel <karijes@users.sourceforge.net>

	* edelib/ForeignCallback.h:
	* src/ForeignCallback.cpp: added foreign callback functions

2009-11-04  Sanel <karijes@users.sourceforge.net>

	* edelib/Theme.h:
	* edelib/ThemeLoader.h:
	* src/Theme.cpp:
	* src/ThemeLoader.cpp:
	* test/theme.cpp: theme loading using XDG paths is now in ThemeLoader
	class, that will also load XSETTINGS code and apply commong theme elements
	on FLTK tree. XSETTINGS code is not yet completed. Tests updated

2009-11-02  Sanel <karijes@users.sourceforge.net>

	* src/Theme.cpp: use .H for FLTK headers; spotted by Ralf and adb

2009-10-16  Sanel <karijes@users.sourceforge.net>

	* Jamconfig.in:
	* Jamrules: add DESTDIR to prefix, instead modifying every install rule

2009-10-13  Sanel <karijes@users.sourceforge.net>
